k8s-manifests/krosslab_dev/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  ports:
  - name: nginx
    port: 80
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
