k8s-manifests/krosslab_dev/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: nginx.text.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        pathType: ImplementationSpecific
